fix spacing for phase 2 duration rows

--- a/web/src/routes/Dashboard/components/GradesTable/GradesTable.scss
+++ b/web/src/routes/Dashboard/components/GradesTable/GradesTable.scss
@@ -51,6 +51,7 @@
 .grades-table__phase-2-row {
   border-bottom: 1px solid #eee;
   padding: .345rem;
+  height: 36px;
 }
 
 .grades-table__phase-2-row:last-of-type {
